# ccplug

./: CHANGELOG.md  Cargo.toml  README.md  SKILL.md  install.sh
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: release.yml
docs/: spec.md
docs/superpowers/plans/: 2026-06-19-ccplug.md  2026-06-19-ccplug.md.tasks.json  2026-06-19-cost-aware-listing.md
docs/superpowers/specs/: 2026-06-19-cost-aware-listing-design.md
skills/ccplug/: SKILL.md
src/: cli.rs  inventory.rs  main.rs  output.rs  settings.rs  target.rs
tests/: cli.rs
